python basic commands

--- a/notebooks/Python basics /Control Flow (if, elif, else).ipynb
+++ b/notebooks/Python basics /Control Flow (if, elif, else).ipynb
@@ -2,34 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c57a012b-169c-4d2a-969d-35dc05026afe",
+   "execution_count": 2,
+   "id": "4a221813-c1cd-47d5-9a26-e9e86c0baa34",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello testing\n"
+      "You are an adult\n",
+      "Your grade is B\n",
+      "18 is Even\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello testing\")"
+    "\n",
+    "age = 18\n",
+    "if age >= 18:\n",
+    "    print(\"You are an adult\")\n",
+    "else:\n",
+    "    print(\"You are a minor\")\n",
+    "\n",
+    "\n",
+    "score = 85\n",
+    "if score >= 90:\n",
+    "    grade = 'A'\n",
+    "elif score >= 80:\n",
+    "    grade = 'B'\n",
+    "elif score >= 70:\n",
+    "    grade = 'C'\n",
+    "else:\n",
+    "    grade = 'D'\n",
+    "print(f\"Your grade is {grade}\")\n",
+    "\n",
+    "\n",
+    "is_even = \"Even\" if (age % 2 == 0) else \"Odd\"\n",
+    "print(f\"{age} is {is_even}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2124605-bafb-4e61-977b-d13178626cd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8ee76c6-8cae-47d4-ad7d-c8fd09ee0e02",
+   "id": "f6c7b9b4-ebe8-42d7-8e89-cfd8d3edcacc",
    "metadata": {},
    "outputs": [],
    "source": []
