--- a/notebooks/Python basics /Functions.ipynb
+++ b/notebooks/Python basics /Functions.ipynb
@@ -2,26 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c2be4148-65c4-46d5-8749-82b93dbdf3ef",
+   "execution_count": 2,
+   "id": "f0a5a1eb-f4fd-4c3a-8bb4-f3ee1f25a2e4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n"
+      "Hello, Alice!\n",
+      "9\n",
+      "27\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello\")"
+    "def greet(name):\n",
+    "    return f\"Hello, {name}!\"\n",
+    "\n",
+    "print(greet(\"Alice\"))\n",
+    "\n",
+    "\n",
+    "def power(base, exponent=2):\n",
+    "    return base ** exponent\n",
+    "\n",
+    "print(power(3))     \n",
+    "print(power(3, 3))   \n",
+    "\n",
+    "\n",
+    "def sum_all(*numbers):\n",
+    "    total = 0\n",
+    "    for num in numbers:\n",
+    "        total += num\n",
+    "    return total\n",
+    "\n",
+    "print(sum_all(1, 2, 3, 4))  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ae9a144-93f7-4028-9363-f8ecd3b05872",
+   "id": "0bb88564-299c-4ab6-b41d-e0465eb51428",
    "metadata": {},
    "outputs": [],
    "source": []
