--- a/notebooks/Python basics /buildin-types.ipynb
+++ b/notebooks/Python basics /buildin-types.ipynb
@@ -929,8 +929,685 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21726c9e-74ad-4f9d-be0a-34829276edec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5ba7f045-df6f-403d-bdd8-ee3668ca5c30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ba9fffe8-0d91-4e5e-ba6d-f219ef25d606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "33201fd7-e5ad-4a01-be37-4c392bb62cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n",
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)\n",
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "09e3d64a-2020-4a5e-995f-b216cda91474",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "76498337-58e7-4681-aab1-ce2ad52f56d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1e18a4c0-aadb-4346-be00-c96ca8aa8f6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ac5ee204-cc8f-4557-8590-fdb8ecb9a760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "82b16c11-e9e6-46a7-b451-520e90a3a9c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f5311e9-ce9f-4459-96a8-3df48994adef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dedf378a-3a3f-4147-ae3f-61a97a83d673",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa4a1b8e-583c-423c-a04d-0fd0678217ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2433980396.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(\"Result of (x = x + y) = \", x)x = 20\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "692d6842-31a9-4ed4-a0f9-c117999e89f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fa007c11-909e-472a-944f-04508bbf16ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "697f055e-c347-4082-8758-cd9aadbfb939",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4a210b47-bafa-497a-8de5-8edc2a5d6551",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3aa420aa-951c-4e05-aff1-28b6ff8d3d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bdf4b0e7-4dbc-4f63-af9d-3e94053af504",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2df7e146-e06e-4425-b870-e2ff0905dde7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "96bea438-a70e-4670-85c6-507306d86eee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bf985c7b-baf7-46d8-9e50-bd7ab3fc73f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d6cd68fd-04a3-428d-96bf-eb0aff6445e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n",
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)\n",
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "df548e64-18e8-43a5-b9b9-63192ebf3d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "744b4f9c-2c86-4158-8442-ebde473977a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "82f0d2f5-5457-46d6-8327-700e13f9bd76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "67d9fa11-42c4-4765-81aa-89e40142edbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d68adc89-a053-41a7-bc51-06930c81ca9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "34bbf1f0-3b0b-4e5c-b08e-3d591af656b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7d38f86d-e8bb-4e48-8656-6f4b3c78e58e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ba42077c-408f-4b7f-9aed-d9e9b7caac37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x = x + y) =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 5\n",
+    "z = 10\n",
+    "x += y\n",
+    "print(\"Result of (x = x + y) = \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d56238-9de2-44b0-b108-d21ddeb68a6f",
    "metadata": {},
    "outputs": [],
    "source": []
